# teoneo-courses

./: .gitignore  Cargo.toml  README.md  dockerfile
src/: main.rs  swagger.rs
src/clients/: auth.rs  mod.rs  request.rs  tasks.rs
src/common/: error.rs  mod.rs  router.rs  token.rs
src/controllers/: certs.rs  course.rs  courses.rs  mod.rs  module.rs  modules.rs  progress.rs  task.rs  tasks.rs  user.rs  users.rs
src/db/: certs.rs  coursedb.rs  courses.rs  mod.rs  moduledb.rs  modules.rs  progress.rs  progressdb.rs  taskdb.rs  tasks.rs  userdb.rs  users.rs
src/handlers/: certs.rs  courses.rs  mod.rs  modules.rs  tasks.rs  users.rs
