[package]
name = "teoneo-courses"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["multipart", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full", "io-util"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.2", features = ["cors", "catch-panic"] }
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.41", features = ["serde"] }
gigalib = { git = "https://github.com/commmrade/gigalib.git" }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
tower = { version = "0.5.2", features = ["limit", "buffer"] }
redis = { version = "0.31.0", features = ["r2d2"] }
r2d2 = "0.8.10"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
